--- a/this.css
+++ b/this.css
@@ -1,5 +1,5 @@
 .profile-header {
-  background: #ebebeb;
+  background: red;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
